# nekoecs

./: .gitignore  .gitmodules  CMakeLists.txt
include/pixmaps/bsd/: awake_bsd.xpm  bsd.include  down1_bsd.xpm  down2_bsd.xpm  dtogi1_bsd.xpm  dtogi2_bsd.xpm  dwleft1_bsd.xpm  dwleft2_bsd.xpm  dwright1_bsd.xpm  dwright2_bsd.xpm  jare2_bsd.xpm  kaki1_bsd.xpm  kaki2_bsd.xpm  left1_bsd.xpm  left2_bsd.xpm  ltogi1_bsd.xpm  ltogi2_bsd.xpm  mati2_bsd.xpm  mati3_bsd.xpm  right1_bsd.xpm  right2_bsd.xpm  rtogi1_bsd.xpm  rtogi2_bsd.xpm  sleep1_bsd.xpm  sleep2_bsd.xpm  space_bsd.xpm  up1_bsd.xpm  up2_bsd.xpm  upleft1_bsd.xpm  upleft2_bsd.xpm  upright1_bsd.xpm  upright2_bsd.xpm  utogi1_bsd.xpm  utogi2_bsd.xpm
include/pixmaps/dog/: awake_dog.xpm  dog.include  down1_dog.xpm  down2_dog.xpm  dtogi1_dog.xpm  dtogi2_dog.xpm  dwleft1_dog.xpm  dwleft2_dog.xpm  dwright1_dog.xpm  dwright2_dog.xpm  jare2_dog.xpm  kaki1_dog.xpm  kaki2_dog.xpm  left1_dog.xpm  left2_dog.xpm  ltogi1_dog.xpm  ltogi2_dog.xpm  mati2_dog.xpm  mati3_dog.xpm  right1_dog.xpm  right2_dog.xpm  rtogi1_dog.xpm  rtogi2_dog.xpm  sleep1_dog.xpm  sleep2_dog.xpm  up1_dog.xpm  up2_dog.xpm  upleft1_dog.xpm  upleft2_dog.xpm  upright1_dog.xpm  upright2_dog.xpm  utogi1_dog.xpm  utogi2_dog.xpm
include/pixmaps/neko/: awake.xpm  down1.xpm  down2.xpm  dtogi1.xpm  dtogi2.xpm  dwleft1.xpm  dwleft2.xpm  dwright1.xpm  dwright2.xpm  jare2.xpm  kaki1.xpm  kaki2.xpm  left1.xpm  left2.xpm  ltogi1.xpm  ltogi2.xpm  mati2.xpm  mati3.xpm  neko.include  right1.xpm  right2.xpm  rtogi1.xpm  rtogi2.xpm  sleep1.xpm  sleep2.xpm  up1.xpm  up2.xpm  upleft1.xpm  upleft2.xpm  upright1.xpm  upright2.xpm  utogi1.xpm  utogi2.xpm
include/pixmaps/sakura/: awake_sakura.xpm  down1_sakura.xpm  down2_sakura.xpm  dtogi1_sakura.xpm  dtogi2_sakura.xpm  dwleft1_sakura.xpm  dwleft2_sakura.xpm  dwright1_sakura.xpm  dwright2_sakura.xpm  jare2_sakura.xpm  kaki1_sakura.xpm  kaki2_sakura.xpm  left1_sakura.xpm  left2_sakura.xpm  ltogi1_sakura.xpm  ltogi2_sakura.xpm  mati2_sakura.xpm  mati3_sakura.xpm  right1_sakura.xpm  right2_sakura.xpm  rtogi1_sakura.xpm  rtogi2_sakura.xpm  sakura.include  sleep1_sakura.xpm  sleep2_sakura.xpm  up1_sakura.xpm  up2_sakura.xpm  upleft1_sakura.xpm  upleft2_sakura.xpm  upright1_sakura.xpm  upright2_sakura.xpm  utogi1_sakura.xpm  utogi2_sakura.xpm
include/pixmaps/tomoyo/: awake_tomoyo.xpm  down1_tomoyo.xpm  down2_tomoyo.xpm  dtogi1_tomoyo.xpm  dtogi2_tomoyo.xpm  dwleft1_tomoyo.xpm  dwleft2_tomoyo.xpm  dwright1_tomoyo.xpm  dwright2_tomoyo.xpm  jare2_tomoyo.xpm  kaki1_tomoyo.xpm  kaki2_tomoyo.xpm  left1_tomoyo.xpm  left2_tomoyo.xpm  ltogi1_tomoyo.xpm  ltogi2_tomoyo.xpm  mati2_tomoyo.xpm  mati3_tomoyo.xpm  right1_tomoyo.xpm  right2_tomoyo.xpm  rtogi1_tomoyo.xpm  rtogi2_tomoyo.xpm  sleep1_tomoyo.xpm  sleep2_tomoyo.xpm  tomoyo.include  up1_tomoyo.xpm  up2_tomoyo.xpm  upleft1_tomoyo.xpm  upleft2_tomoyo.xpm  upright1_tomoyo.xpm  upright2_tomoyo.xpm  utogi1_tomoyo.xpm  utogi2_tomoyo.xpm
include/pixmaps/tora/: awake_tora.xpm  down1_tora.xpm  down2_tora.xpm  dtogi1_tora.xpm  dtogi2_tora.xpm  dwleft1_tora.xpm  dwleft2_tora.xpm  dwright1_tora.xpm  dwright2_tora.xpm  jare2_tora.xpm  kaki1_tora.xpm  kaki2_tora.xpm  left1_tora.xpm  left2_tora.xpm  ltogi1_tora.xpm  ltogi2_tora.xpm  mati2_tora.xpm  mati3_tora.xpm  right1_tora.xpm  right2_tora.xpm  rtogi1_tora.xpm  rtogi2_tora.xpm  sleep1_tora.xpm  sleep2_tora.xpm  tora.include  up1_tora.xpm  up2_tora.xpm  upleft1_tora.xpm  upleft2_tora.xpm  upright1_tora.xpm  upright2_tora.xpm  utogi1_tora.xpm  utogi2_tora.xpm
include/pixmasks/bsd/: awake_bsd_mask.xpm  bsd.mask.include  down1_bsd_mask.xpm  down2_bsd_mask.xpm  dtogi1_bsd_mask.xpm  dtogi2_bsd_mask.xpm  dwleft1_bsd_mask.xpm  dwleft2_bsd_mask.xpm  dwright1_bsd_mask.xpm  dwright2_bsd_mask.xpm  jare2_bsd_mask.xpm  kaki1_bsd_mask.xpm  kaki2_bsd_mask.xpm  left1_bsd_mask.xpm  left2_bsd_mask.xpm  ltogi1_bsd_mask.xpm  ltogi2_bsd_mask.xpm  mati2_bsd_mask.xpm  mati3_bsd_mask.xpm  right1_bsd_mask.xpm  right2_bsd_mask.xpm  rtogi1_bsd_mask.xpm  rtogi2_bsd_mask.xpm  sleep1_bsd_mask.xpm  sleep2_bsd_mask.xpm  space_bsd_mask.xpm  up1_bsd_mask.xpm  up2_bsd_mask.xpm  upleft1_bsd_mask.xpm  upleft2_bsd_mask.xpm  upright1_bsd_mask.xpm  upright2_bsd_mask.xpm  utogi1_bsd_mask.xpm  utogi2_bsd_mask.xpm
include/pixmasks/dog/: awake_dog_mask.xpm  dog.mask.include  down1_dog_mask.xpm  down2_dog_mask.xpm  dtogi1_dog_mask.xpm  dtogi2_dog_mask.xpm  dwleft1_dog_mask.xpm  dwleft2_dog_mask.xpm  dwright1_dog_mask.xpm  dwright2_dog_mask.xpm  (+23 more)
lib/flecs_components_gui/: CMakeLists.txt
lib/flecs_components_gui/include/: flecs_components_gui.h
lib/flecs_components_gui/src/: flecs_components_gui.c
lib/flecs_components_input/: CMakeLists.txt
lib/flecs_components_input/include/: flecs_components_input.h
lib/flecs_components_input/src/: flecs_components_input.c
lib/flecs_platform_sdl2/: CMakeLists.txt
lib/flecs_platform_sdl2/include/: flecs_platform_sdl2.h  sdl2_components.h  sdl2_systems_input.h  sdl2_systems_renderer.h  sdl2_systems_window.h
lib/flecs_platform_sdl2/src/: flecs_platform_sdl2.c  sdl2_components.c  sdl2_systems_input.c  sdl2_systems_renderer.c  sdl2_systems_window.c
src/: main.c
(+101 files in other folders)
